fixed about me spacing and font

--- a/app/assets/stylesheets/components/_teacher_main.scss
+++ b/app/assets/stylesheets/components/_teacher_main.scss
@@ -344,6 +344,9 @@
 
 .aboutMe-introduction {
     white-space: pre-wrap;
+    font-size: 14px;
+    color: #333;
+    line-height: 21px;
 }
 
 // .TextOverflow {
