--- a/app/assets/stylesheets/components/_teacher_profile.scss
+++ b/app/assets/stylesheets/components/_teacher_profile.scss
@@ -9,3 +9,8 @@
     padding-bottom: 50px;
     padding-top: 100px;
 }
+
+.Video-body {
+    width: 100%;
+    height: 100%;
+}
